6lowpan dissector fails RFC 4944 compliance
This issue was migrated from bug 5047 in our old bug tracker.
Original bug information:
Reporter: John Sucaet
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: 1.4.0
Attachments:
6-lowpan.patch: proposed patch for packet-6lowpan.c
6-lowpan-01.patch: proposed patch for packet-6lowpan.c
6-lowpan-02.patch: proposed patch for packet-6lowpan.c