From John Sucaet: The committed changes in 33624 did not include all fixes of the previous patch file - Please add the fix for the field description of the 8-bit Deep Hops Left field Attached file contains this fix (+as well as small correction to the field descriptions of V and F flags, according to the terminology of RFC 4944) https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5047

svn path=/trunk/; revision=33630